@@ -21,6 +21,7 @@ CAY-1964 Fix convertAdditionalDataMaps() in CayenneGeneratorMojo.java
 CAY-1973 error while generating classes
 CAY-1978 ESCAPE clause should be included in LIKE parenthesis
 CAY-1979 Prefetches on Many-to-Many Relationships with Longvarchar
+CAY-2049 Changing the Relationship name in ObjRelationship Inspector has no effect
 
 ----------------------------------
 Release: 3.1-final
